# unfancy-timer

./: .gitignore  BUILD.md  README.md  index.html  package.json  vite.config.js
src/: App.jsx  animations.js  components.jsx  eventEmitter.js  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
